WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278889
nullptr crash in WebCore::Document::removeVisualUpdatePreventedReasons
https://bugs.webkit.org/show_bug.cgi?id=278889
Summary
nullptr crash in WebCore::Document::removeVisualUpdatePreventedReasons
Matt Woodrow
Reported
2024-08-29 16:00:03 PDT
rdar://134585167
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2024-08-29 16:02:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32913
EWS
Comment 2
2024-08-29 19:43:07 PDT
Committed
282942@main
(f5992b2640e0): <
https://commits.webkit.org/282942@main
> Reviewed commits have been landed. Closing PR #32913 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug