nullptr crash in WebCore::Document::removeVisualUpdatePreventedReasons. https://bugs.webkit.org/show_bug.cgi?id=278889 <rdar://134585167>

Reviewed by Dan Glastonbury.

Somewhat subtly, adding a ; into an if statement results in the first half not
actually being part of the tested condition.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::removeVisualUpdatePreventedReasons):

Canonical link: https://commits.webkit.org/282942@main